experiement_output/error_log/nondex-forest-code-spring_study_hyunsoo:spring-boot-journal-test.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-test/src/main/java/com/spring/boot/journal/controller/JournalController.java:37: error: cannot find symbol
        return entries.stream().filter(entry -> entry.getTitle().toLowerCase().contains(title.toLowerCase())).collect(Collectors.toList());
                                                     ^
  symbol:   method getTitle()
  location: variable entry of type JournalEntry
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-boot-journal-test:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 4s
